{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Player",
            "id": "6de4e563-c1c4-40ce-93f8-68d19bec617b",
            "actions": [
                {
                    "name": "Touch",
                    "type": "Button",
                    "id": "6a12a88c-61a5-4cd9-9f9f-1ae1ffae0e18",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "5dc135bd-01d1-4c45-a9e3-442cb928e215",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveToPosition",
                    "type": "Button",
                    "id": "5b0c3c44-275d-4b57-8d49-35651e2aa5d3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "84027427-28dc-4520-8fc4-9dc534d7916e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ca79229d-15c4-4521-b70c-f950e96c7880",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cd0214f5-f571-4ea3-8f29-d1c8b762ab35",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveToPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}